--- a/Homeless_Shelters_Locations.ipynb
+++ b/Homeless_Shelters_Locations.ipynb
@@ -4271,6 +4271,17 @@
     "# Preview the map\n",
     "homeless_shelter_map"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "1f85f50f-c62a-4c9b-a199-be91caef0f9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to CSV\n",
+    "homeless_data.to_csv('Data\\Toronto_Homeless_Shelters_Data.csv')"
+   ]
   }
  ],
  "metadata": {
